# goforge

./: Makefile  README.md  coder.py  example.yml  json_to_go.py  main.py  parser.py  pyproject.toml  requirements.txt
agents/: __init__.py  agents.py
agents/sql_maker/: __init__.py  query_sql_generator.py
example/: docker-compose.yml  go.mod  main.go  sqlc.yml
example/handlers/: config.go  create_user.go  get_users.go  update_user.go
example/models/: db.gen.go  models.gen.go  queries.sql  queries.sql.gen.go  queries.sql.go  schema.sql
file_manager/: file_manager.py
goforge/: __init__.py  __main__.py  config_parser.py  main.py
goforge/example/: go.sum  sqlc.yml
goforge/example/handlers/: create_user.go  update_user.go
goforge/example/models/: queries.sql
goforge/file_manager/: file_manager.py
goforge/writer/: __init__.py  handler_maker.py  server_maker.py  sql_maker.py
src/goforge/: __main__.py  main.py
src/goforge/example/: docker-compose.yml  main.go
src/goforge/example/handlers/: config.go
src/goforge/file_manager/: file_manager.py
src/goforge/writer/: handler_maker.py  server_maker.py
writer/: handler_maker.py  server_maker.py  sql_maker.py
